<resources>
    <string name="app_name">人人机</string>

    <string name="action_settings">Settings</string>
    <string name="part_json_error">JSON 解析错误</string>
    <!-- new Home UI tabs -->
    <string name="tab_near_people">首页</string>
    <string name="tab_circle">圈子</string>
    <string name="tab_drying">晒单</string>
    <string name="tab_settings">我的</string>
    <string name="tab_live">分类</string>
    <string name="tab_discovered">发现</string>
    <string name="rotate_left">向左旋转</string>
    <string name="rotate_right">向右旋转</string>
    <string name="upgrade_dialog_downloading">下载中&#8230;</string>
    <string name="upgrade_dialog_download_failed">下载失败</string>
    <string name="done_download">下载完成,点击安装。</string>
    <string name="upgrade_dialog_download">已下载: %d%%</string>
    <string name="unable_to_create_file">创建文件失败: %s</string>
    <string name="already_newest_version">当前已经是最新版本</string>
    <string name="update_title">版本更新</string>
    <string name="update_info">版本：%1$s\n更新内容：\n%2$s</string>
    <string name="upgrade_dialog_default_message">有新版本啦，现在去更新？</string>
    <string name="start_download">开始下载</string>
    <string name="downloading_now">正在下载：</string>

    <string name="set_default_address">设为默认</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_address">删除地址</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="address_show_detail">收货地址：%1$s %2$s %3$s %4$s</string>
    <string name="order_mun">共计%1$d件商品</string>
    <string name="pre_order_mun">购物车小计(%1$d件商品):</string>
    <string name="set_default_address_info">是否设置该地址为收货的默认地址？</string>
    <string name="set_cancel_default_address_info">是否取消该地址为收货的默认地址？</string>
    <string name="del_address_info">是否删除该地址？</string>
    <string name="my_order_title">我的订单</string>
    <string name="json_parse_error_tip">Data error</string>


    <string name="address_name">收货人姓名</string>
    <string name="address_phone">手机号码</string>
    <string name="address">所在城市</string>
    <string name="address_info">如道路、门牌号、小区、楼栋号、单元室等</string>
    <string name="add_title_address">新建收货地址</string>
    <string name="address_name_error">收货人姓名错误</string>
    <string name="province_error">收货人省份错误</string>
    <string name="city_error">收货人城市错误</string>
    <string name="county_error">收货人地区错误</string>
    <string name="a_info_error">收货人详情地址错误!</string>
    <string name="address_admin">收货地址</string>
    <string name="address_show">%1$s %2$s %3$s </string>
    <string name="account_address_show">%1$s %2$s </string>
    <string name="add_address">+收货地址</string>
    <string name="update_title_address">编辑收货地址</string>
    <string name="feedback_dialog_save">保存</string>
    <string name="add_address_btn">添加</string>
    <string name="add_dry">发表晒单</string>
    <string name="next_step">下一步</string>
    <string name="once_again_to_exit">再按一次退出程序</string>
    <string name="edit_image_failed">图像编辑失败</string>
    <string name="src_file_empty">源文件不存在</string>
    <string name="src_file_decode_error">源文件无法读取</string>
    <string name="dest_file_empty">目标文件不存在</string>
    <string name="cancel_confirm">取消本操作？</string>
    <string name="edit_image">编辑图片</string>
    <string name="error_create_temp_file">无法编辑，创建临时文件失败</string>

</resources>
