<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/address_name_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:gravity="center"
                android:text="收货人"
                android:textColor="#333333"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <EditText
                    android:id="@+id/address_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_toLeftOf="@+id/address_name_icon_go"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="@string/address_name"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textColor="#2E2E2E"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/address_name_icon_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="11dp"
                    android:src="@drawable/icon_go" />
            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="#f2f2f2" />

        <LinearLayout

            android:id="@+id/address_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/address_name_layout"
            android:background="#fff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:text="手机号码"
                android:textColor="#333333"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <EditText
                    android:id="@+id/address_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_toLeftOf="@+id/address_phone_icon_go"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="收件人电话"
                    android:inputType="phone"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textColor="#2E2E2E"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/address_phone_icon_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="11dp"
                    android:src="@drawable/icon_go" />
            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="#f2f2f2" />

        <LinearLayout
            android:id="@+id/address_address_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/address_phone_layout"
            android:background="#fff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="所在地区"
                android:textColor="#333333"
                android:textSize="13sp" />

            <RelativeLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/address_img"
                    android:gravity="center_vertical|right"
                    android:hint="@string/address"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textColor="#2E2E2E"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/address_img"
                    android:layout_width="12dp"
                    android:layout_height="6dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="11dp"
                    android:src="@drawable/refund_down" />

            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:background="#f2f2f2" />

        <LinearLayout
            android:id="@+id/address_info_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/address_address_layout"
            android:background="#fff"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="详细地址"
                android:textColor="#333333"
                android:textSize="13sp" />


            <EditText
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/address_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/address_info"
                android:textColor="#2E2E2E"
                android:textSize="13sp" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:background="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:text="设为默认地址"
            android:textColor="#333333"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/address_default"
            style="@style/CustomCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:text="@string/delete_address"
        android:textColor="#ff0000"
        android:textSize="13sp" />

</LinearLayout>